# r4-monorepo

./: .dockerignore  .gitignore  .yamllint  AUDIT.md  BENCHMARKS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.secure  ESV_README.md  ESV_REPORT.md  FIPS_READINESS.md  LICENSE  LICENSE-API.md  LICENSE-CORE.md  LICENSE-PROPRIETARY.txt  Makefile  NOTICE  NOTICE.md  PRODUCT_BRIEF.md  README.md  README_API.md  README_RUNTIME.md  RELEASE_NOTES.md  RESULTS.md  ROADMAP.md  SBOM.vrf-spec.cdx.json  SECURITY.md  SPONSORS.md  ci_noop_guard.mk  collect_samples.sh  cover_letter.txt  docker-compose.yml  entrypoint.sh  gen_manifest.sh  logs_vrf.txt  main.py  pack_esv.sh  package-lock.json  package.json  (+15 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: audit_request.md  feature_request.md
.github/workflows/: build-test.yml  build.yml  ci.yml  ci_build.yml  ci_dispatch.yml  ci_ok.yml  dispatch_ok.yml  manual.yml  manual_run.yml  public-sanity.yml  publish-pypi.yml  release.yml  sanity-check.yml  sanity.yml  vrf-tests.yml
api/: PYPI_LICENSES.json  THIRD_PARTY_NOTICES.pypi.md  app.py  app.py.bak.1761861875  app.py.bak.20251030_164031  app.py.bak.20251030_164154  app.py.bak.20251030_164315  app_dual.py  app_fixed.py  dual_router.py  dual_router.py.bak.1761862480  dual_router.py.bak.1761862989  fips_selftest.py  main.py  requirements.txt  sign_dilithium.py  sign_ecdsa.py  sign_pq.py  sign_pq.py.bak.20251030_165106  sign_pq.py.bak.20251030_165408
artifacts/: README.md
bindings/python/: r4.py  setup.py
clients/python/re4ctor_client/: api.py
components/Re4ctoR-RNG/: RESULTS.md
components/Re4ctoR-RNG/.github/ISSUE_TEMPLATE/: bug_report.md
components/r4-cs/docs/: IMPLEMENTATION_CHECKLIST.md
components/r4-cs/rng_reports/: r4cs_dieharder_retest_summary.txt  testu01_crush_summary.txt
components/r4-cs/rng_reports/testu01/: bigcrush_summary.txt
core/: CMakeLists.txt
core/proof/: README.md
docker/stubs/: re4_dump
docs/: COMPETITION.md  COMPETITORS.md  DEPLOYMENT.md  EMAIL_TEMPLATES.md  FIPS_204_roadmap.md  SPEC-R4CS.md  USAGE.md  index.md
docs/proof/: benchmarks_summary.md  fips_readiness.md
esv_artifacts/: MANIFEST.md  notes.txt
examples/: out_dual_ecdsa.json
examples/fair/: commit_reveal.py
examples/lottery/: README.md
examples/vrf/: IVRFConsumer.sol
examples/vrf-hardhat/: .env.example  R4VRFVerifier.sol  README.md  hardhat.config.js  package-lock.json  package.json
examples/vrf-hardhat/contracts/: ConsumerDemo.sol  R4VRFVerifier.sol
examples/vrf-hardhat/scripts/: check_last.js  deploy.js  peek_events.js  push_randomness.js  push_randomness.js.bak  read_ticket.js
examples/vrf-hardhat/test/: verify.js
examples/vrf/contracts/: MockVerifier.sol
examples/vrf/scripts/: request_randomness.py
github/ISSUE_TEMPLATE/: bug_report.md
include/: r4.h
legal/: IP_ASSIGNMENT_TEMPLATE.md
proto/: README.md
r4-prod/: .gitignore
r4-prod/.git.NESTED_BACKUP.20260212_220139/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
r4-prod/.git.NESTED_BACKUP.20260212_220139/refs/: stash
r4-prod/site/site/: index.html
rng_reports/: README.md
rng_reports/20250914_170954_consolidated/: NOTE.txt  dieharder_1gb.txt
rng_reports/20250924_154350_dieharder_recheck/: craps_102_run2.txt  craps_103_run2.txt  craps_103_run3.txt  lagged_sum_run2.txt
rng_reports/20250924_160803_dieharder_recheck_mingw/: test_102_run2.txt  test_109_run3.txt
rng_reports/20251014_211845_consolidated/: practrand_1gb.txt
rng_reports/20251014_213105_consolidated/: practrand_1gb.txt
rng_reports/20251014_213502_consolidated/: practrand_1gb.txt
rng_reports/20251014_213936_consolidated/: dieharder_1gb.txt  practrand_1gb.txt
rng_reports/20251014_220034_consolidated/: dieharder_2gb.txt  practrand_256mb.txt
scripts/: make_proof_bundle.sh
sdk_py_r4/: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py  test_r4.py  test_r4sdk.py  test_r4sdk_8082.py  test_sdk.py  test_vrf_8081.py  test_vrf_client.py  test_vrf_preview.py
sdk_py_r4/.github/workflows/: publish.yml
sdk_py_r4/r4sdk/: __init__.py  client.py  vrf.py
sdk_py_r4/tools/: fetch_and_verify_vrf.py  verify_ecdsa.py  verify_ecdsa_8084.py  verify_ecdsa_bruteforce2_8084.py  verify_ecdsa_bruteforce3_8084.py  verify_ecdsa_bruteforce_8084.py  vrf_bruteforce_verify.py  vrf_probe.py
specs/vrf/: VRF-API.md
src/: r4_client.c  r4cat.c
src/ref/: r4_public_ref.h
tests/: tamper.sh
tools/: release.sh  summarize_rng.py  verify_dual.py  verify_dual_local.sh  verify_vrf_local.py  verify_vrf_local.sh  verify_vrf_msg_hash.py  verify_vrf_msghash.mjs
vrf/: LICENSE
vrf-spec/: LICENSE  README.md  TESTING.MD  THIRD_PARTY_NOTICES.py.md  hardhat.config.js  licenses.all.json  package-lock.json  package.json
vrf-spec/.github/workflows/: license-check.yml
vrf-spec/contracts/: LotteryR4.sol  R4VRFVerifier.sol  R4VRFVerifierCanonical.sol
vrf-spec/test/: lottery.js  verify.js  verifyDual.js  verify_r4_canonical.js
vrf-spec/test_legacy/: verify_r4.legacy.js
vrf/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
vrf/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
vrf/.github/workflows/: ci.yml  release.yml
vrf/components/Re4ctoR-RNG/: CHANGELOG.md  CODE_OF_CONDUCT.md  NOTICE
vrf/components/r4-cs/: r4cs.c
vrf/components/re4ctor-ipc/: README.md
vrf/docs/: demo.js  style.css
vrf/examples/fair/: commit_reveal.py
vrf/examples/vrf-hardhat/: .gitignore
vrf/include/: r4.h
vrf/install() + pkg-config/: CMake config
vrf/rng_reports/: README.md
vrf/rng_reports/20250914_170954_consolidated/: practrand_1gb.txt
vrf/rng_reports/20250923_212444_win/: practrand_2GiB.txt
vrf/rng_reports/20250924_154350_dieharder_recheck/: craps_102_run1.txt  craps_102_run3.txt  craps_103_run1.txt  lagged_sum_run1.txt  lagged_sum_run3.txt
vrf/rng_reports/20250924_160803_dieharder_recheck_mingw/: test_102_run1.txt  test_102_run3.txt  test_103_run1.txt  test_103_run2.txt  test_103_run3.txt  test_109_run1.txt  test_109_run2.txt
vrf/rng_reports/9.02_215914_win/: practrand_2GiB.txt
vrf/specs/vrf/: VRF-API.md
vrf/src/: r4cat.c
(+17 files in other folders)
