[metadata]
name = r4sdk
version = 0.1.5
author = Pavlo Tvardovskyi
author_email = pavlo@example.com
description = Lightweight Python SDK for R4 entropy appliance and verifiable randomness API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pipavlo82/r4-monorepo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Security :: Cryptography

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.package_data]
* = py.typed

[build-system]
requires = ["setuptools", "wheel"]
build-backend = setuptools.build_meta
